Started the general structure of the website

--- a/Flask Structure/flaskr/templates/analytics.html
+++ b/Flask Structure/flaskr/templates/analytics.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block title %} 
-La ferme des 3 chênes: Home
+La ferme des 3 chênes: Analytics 
 {% endblock %}
 
 
 {% block content %} 
 
-<h1>
+<h3>
     <p>
-        This is a line, in the content of home.html :)
+       This page is about the analytics of la ferme des 3 chênes.
     </p>
-</h1>
+</h3>
 
 {% endblock %}
