--- a/Flask Structure/flaskr/templates/contact.html
+++ b/Flask Structure/flaskr/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} 
-La ferme des 3 chênes: Home
+La ferme des 3 chênes: Contact
 {% endblock %}
 
 
@@ -9,7 +9,7 @@ La ferme des 3 chênes: Home
 
 <h1>
     <p>
-        This is a line, in the content of home.html :)
+        This page will include contact 
     </p>
 </h1>
 
