--- a/Flask Structure/flaskr/templates/base.html
+++ b/Flask Structure/flaskr/templates/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="static/style.css">
+  <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>
       {% block title %} {% endblock %}
@@ -32,6 +37,49 @@
 
     {% block content %} {% endblock %}
 
+    <footer>
+      <br> <br>
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h1 class="logo-text"><span>Website Name</span></h1><br>
+              <p> Voici notre site de l'analyse des stats de la ferme des 3 chênes.</p> 
+              <br>
+            </div>
+            <div class="footer-section links">
+                <h2>
+                    Autres Liens
+                </h2> <br>
+              <ul>
+                  <a href="http://www.lafermedestroischenes.be/">Lien vers la ferme des 3 chênes</a>
+              </ul>
+            </div>
+            <div class="footer-section contact-form">
+                <h2>
+                    Contactez-Nous
+                </h2> <br>
+                <div class="contact">
+                  <span><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:arthur.deneyer@student.uclouvain.be">De Neyer Arthur</a> </span>
+                  </div>
+                  <br>
+                  <div class="contact">
+                      <span><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:alexandru.doroiman@student.uclouvain.be">Doroiman Alexandru</a>  </span>
+                  </div>
+                  <br>
+                  <div class="contact">
+                      <span><i class="fas fa-envelope"></i> <a href="mailto:arthur.louette@student.uclouvain.be">Louette Arthur</a> </span>
+                  </div>
+                  <br>
+                  <div class="contact">
+                    <span><i class="fas fa-envelope"></i> <a href="mailto:noah.@student.uclouvain.be">xxx Noah</a> </span>
+                  </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy;Website Name • Designed and Coded by Team BG
+        </div>
+    </div>
+  </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
