--- a/Flask Structure/flaskr/templates/backup de base.html
+++ b/Flask Structure/flaskr/templates/backup de base.html
@@ -5,17 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="static/style.css">
+  <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>
       {% block title %} {% endblock %}
   </title>
 </head>
 <body>
-  <header>
-    <b href="#" class = home>Home</b>
-    <af>
-      <li><b href="http://127.0.0.1:5000/analytics">Analytics</b></li>
-    </af>
-  </header>  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">La ferme des 3 chênes</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="http://127.0.0.1:5000/home"> Home <span class="sr-only">  </span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://127.0.0.1:5000/analytics">Analytics</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://127.0.0.1:5000/contact">Contact</a>
+            </li>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
 
     {% block content %} {% endblock %}
 
@@ -31,8 +49,7 @@
             <div class="footer-section links">
                 <h2>
                     Autres Liens
-                </h2> 
-              <br>
+                </h2> <br>
               <ul>
                   <a href="http://www.lafermedestroischenes.be/">Lien vers la ferme des 3 chênes</a>
               </ul>
@@ -63,6 +80,10 @@
         </div>
     </div>
   </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
