--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/style.css">
-  <link rel="shortcut icon" type="png" href="images/icon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/oak.ico" />
   <title>
       {% block title %} {% endblock %}
   </title>
