--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -49,19 +49,19 @@
                     Contactez-Nous
                 </h2> <br>
                 <div class="contact">
-                  <span><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:arthur.deneyer@student.uclouvain.be">De Neyer Arthur</a> </span>
+                  <span><i class="fas fa-envelope"></i>&nbsp;<a href="mailto:arthur.deneyer@student.uclouvain.be">De Neyer Arthur</a> </span>
                   </div>
                   <br>
                   <div class="contact">
-                      <span><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:alexandru.doroiman@student.uclouvain.be">Doroiman Alexandru</a>  </span>
+                      <span><i class="fas fa-envelope"></i>&nbsp;<a href="mailto:alexandru.doroiman@student.uclouvain.be">Doroiman Alexandru</a>  </span>
                   </div>
                   <br>
                   <div class="contact">
-                      <span><i class="fas fa-envelope"></i> <a href="mailto:arthur.louette@student.uclouvain.be">Louette Arthur</a> </span>
+                      <span><i class="fas fa-envelope"></i>&nbsp;<a href="mailto:arthur.louette@student.uclouvain.be">Louette Arthur</a> </span>
                   </div>
                   <br>
                   <div class="contact">
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:noah.@student.uclouvain.be">xxx Noah</a> </span>
+                    <span><i class="fas fa-envelope"></i>&nbsp;<a href="mailto:noah.@student.uclouvain.be">Cordier Noah</a> </span>
                   </div>
             </div>
         </div>
