--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="static/style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="images/oak.ico" />
+  <link rel="stylesheet" href="static/style.css"> 
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <title>
       {% block title %} {% endblock %}
   </title>
@@ -61,7 +61,7 @@
                   </div>
                   <br>
                   <div class="contact">
-                    <span><i class="fas fa-envelope"></i>&nbsp;<a href="mailto:noah.@student.uclouvain.be">Cordier Noah</a> </span>
+                    <span><i class="fas fa-envelope"></i>&nbsp;<a href="mailto:noah.cordier@student.uclouvain.be">Cordier Noah</a> </span>
                   </div>
             </div>
         </div>
