--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/style.css"> 
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='oak(principal).ico') }}">
   <title>
       {% block title %} {% endblock %}
   </title>
