--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -86,7 +86,7 @@ a
 a:hover
 {
     color:#c9c9ca;
-    text-decoration: underline;
+    text-decoration: none;
     margin-left: 5px;
     transition: all 1s;
 }
@@ -197,7 +197,7 @@ img
 .footer .footer-content .links ul a:hover
 {
     color:#c9c9ca;
-    text-decoration: underline;
+    text-decoration: none;
     margin-left: 5px;
     transition: all 1s;
 }
@@ -215,16 +215,13 @@ img
 
 /* code css pour le menu déroulant situé dans Analytics pour afficher l'un des 4 graphes*/
 *{
-    margin:0px;
-    padding:0px;
     font-family:Avenir,sans-serif;
 }
 
 nav {
-    width:100%;
-    margin:0 auto;
+    width:auto;
     background-color:#44464B;
-    position:sticky;
+    position: sticky;
     top:0px;
 }
 
@@ -233,7 +230,6 @@ nav ul {
 }
 
 nav ul li{
-    float:left;
     width:25%;
     text-align:center;
     position:relative;
@@ -246,25 +242,28 @@ nav ul::after{
 }
 
 nav a{
-    display:block;
+    display:flex;
     text-decoration:none;
     color:#333;
     border-bottom:2px solid transparent;
-    padding:10px 0px;
+    opacity: 0.7;
+    transition: all 1s;
 }
 
 nav a:hover{
-    color:orange;
-    border-bottom:2px solid gold;
+    border-bottom:2px solid white;
+    display: flex;
+    opacity: 1;
+    font-size: 105%;
+    transition: all .5s;
 }
 
 .sous{
     display:none;
     box-shadow:0px 1px 2px #CCC;
     background-color:white;
-    position:absolute;
-    width:100%;
-    z-index:1000;
+    text-align: center;
+    width: auto;
 }
 
 nav > ul li:hover .sous{
@@ -273,7 +272,7 @@ nav > ul li:hover .sous{
 
 .sous li{
     float:none;
-    width:100%;
+    width:auto;
     text-align:left;
 }
 
@@ -285,6 +284,7 @@ nav > ul li:hover .sous{
 .sous a:hover{
     border-bottom:none;
     background-color:RGBa(200,200,200,0.1);
+    text-decoration: none;
 }
 
 .deroulant > a::after{
@@ -292,7 +292,19 @@ nav > ul li:hover .sous{
     font-size: 12px;
 }
 
-.conteneur{
-  margin: 50px 20px;
-  height: 1500px;
+nav ul .deroulant .sous 
+{
+    background-color:#414145;
+}
+
+nav
+{
+    background-color:#414145;
+    margin-left: 5%;
+}
+
+nav ul .deroulant a
+{
+    color: white;
+    left: auto;
 }
