added python in chart.js

--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -26,7 +26,7 @@ La ferme des 3 chênes: Analytics
         var myChart = new Chart(ctx, {
         type: 'bar',   // le type du graphique
         data: {        // les données
-            labels: ['Jean', 'Martine', 'Michel', 'Jules', 'Louise', 'Dominique'],
+            labels: [ {% for item in liste %} "{{ item }}", {% endfor %} ],
             datasets: [{
                         label: 'votes',
                         data: [12, 19, 13, 19, 20, 3]
