--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -10,29 +10,43 @@ La ferme des 3 chênes: Analytics
         <ul>
             <li class="deroulant"><a href="#">Choisir un Graphique à afficher &ensp;</a>
                 <ul class="sous">
-                    <li><a href="#" title="Graphe 1">Graphique 1</a></li>
-                    <li><a href="#" title="Graphe 2">Graphique 2</a></li>
-                    <li><a href="#" title="Graphe 3">Graphique 3</a></li>
+                    <li><a href="#" title="Graphe 1" onclick="updateChart('rgba(200, 255, 255, 1)', 'Graphe 1', ['a', 'b', 'c', 'd'], [5, 10, 15, 20])">Graphique 1</a></li>
+
+                    <li><a href="#" title="Graphe 2"onclick="updateChart('rgba(25, 177, 176, 1)', 'Graphe 2', ['ee', 'gg', 'dd', 'eed'], [77, 39, 47, 65])">Graphique 2</a></li>
+
+                    <li><a href="#" title="Graphe 3"onclick="updateChart('rgba(160, 167, 167, 1)', 'Graphe 3', ['1', '10', '100', '1000'], [19, 29, 39, 49])">Graphique 3</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script type="text/javascript" src="jscript/graph.js"></script>
-    <canvas id="graphique" width="200" height="100" ></canvas>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
+
+    <canvas id="myChart" width="800" height="400" ></canvas>
     <script>
-        var ctx = document.getElementById('graphique').getContext('2d');
-        var myChart = new Chart(ctx, {
-        type: 'bar',   // le type du graphique
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const myChart = new Chart(ctx, {
+        type: ['line'],   // le type du graphique
         data: {        // les données
-            labels: [ {% for item in liste %} "{{ item }}", {% endfor %} ],
+            labels: ["a", "b", "c", "d", "e", "f"],
             datasets: [{
+                        backgroundColor: 'rgba(255, 255, 255, 1)',
                         label: 'Votes ',
                         data: [12, 19, 13, 19, 20, 3]
                     }]
-            }
+            },
+        options: {
+            responsive: false }
             }
         );
+    
+    function updateChart(color, main_label,labels, data){
+        myChart.data.datasets[0].backgroundColor = color;
+        myChart.data.labels = labels;
+        myChart.data.datasets[0].data = data;
+        myChart.data.datasets[0].label = main_label;
+        myChart.update();
+    }
     </script>
 
 
