fixed graph + paragraph going with them

--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -10,11 +10,11 @@ La ferme des 3 chênes: Analytics
         <ul>
             <li class="deroulant"><a href="#">Choisir un Graphique à afficher &ensp;</a>
                 <ul class="sous">
-                    <li><a href="#" title="Graphe 1" onclick="updateChart('radar', 'rgba(200, 255, 255, 1)', 'Graphe 1', ['a', 'b', 'c', 'd'], [5, 10, 15, 20]), change()", id="para1">Graphique 1</a></li>
+                    <li><a href="#" title="Graphe 1" onclick="updateChart('radar', 'rgba(200, 255, 255, 1)', 'Graphe 1', ['a', 'b', 'c', 'd'], [5, 10, 15, 20]), show_para('para1'), hide_para('para2', 'para3')" >Graphique 1 </a> </li>
 
-                    <li><a href="#" title="Graphe 2"onclick="updateChart('line', 'rgba(25, 177, 176, 1)', 'Graphe 2', ['ee', 'gg', 'dd', 'eed'], [77, 39, 47, 65]), change()", id="para2">Graphique 2</a></li>
+                    <li><a href="#" title="Graphe 2"onclick="updateChart('line', 'rgba(25, 177, 176, 1)', 'Graphe 2', ['ee', 'gg', 'dd', 'eed'], [77, 39, 47, 65]), show_para('para2'), hide_para('para1', 'para3')">Graphique 2</a></li>
 
-                    <li><a href="#" title="Graphe 3"onclick="updateChart('line', 'rgba(160, 167, 167, 1)', 'Graphe 3', ['1', '10', '100', '1000'], [19, 29, 39, 49]), change()", id="para3">Graphique 3</a></li>
+                    <li><a href="#" title="Graphe 3"onclick="updateChart('line', 'rgba(160, 167, 167, 1)', 'Graphe 3', ['1', '10', '100', '1000'], [19, 29, 39, 49]), show_para('para3'), hide_para('para2', 'para1')" >Graphique 3</a></li>
                 </ul>
             </li>
         </ul>
@@ -22,10 +22,10 @@ La ferme des 3 chênes: Analytics
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
 
-    <canvas id="myChart" width="800" height="400" ></canvas>
+    <canvas id="line" width="800" height="400" style="display: none;"></canvas>
     <script>
-        const ctx = document.getElementById('myChart').getContext('2d');
-        const myChart = new Chart(ctx, {
+        const ctx = document.getElementById('line').getContext('2d');
+        const line = new Chart(ctx, {
         type: ['line'],   // le type du graphique
         data: {        // les données
             labels: ["a", "b", "c", "d", "e", "f"],
@@ -42,7 +42,7 @@ La ferme des 3 chênes: Analytics
     
     </script>
 
-    <canvas id ="radar" width="800" height="400"></canvas>
+    <canvas id ="radar" width="800" height="400" style="display: none;"></canvas>
 
     <script> 
         const ctx1 = document.getElementById('radar').getContext('2d');
@@ -57,7 +57,7 @@ La ferme des 3 chênes: Analytics
                     }]
             },
         options: {
-            responsive: false,k
+            responsive: false,
          }
             }
         );     
@@ -68,18 +68,25 @@ La ferme des 3 chênes: Analytics
         if (type_chart=='line') {
             hideChart("radar");
             radar.update();
-            showChart("radar")
+            showChart("line")
+            line.data.datasets[0].backgroundColor = color;
+            line.data.labels = labels;
+            line.data.datasets[0].data = data;
+            line.data.datasets[0].label = main_label;
+            line.update();
+
         }
             if (type_chart=="radar") {
             hideChart("line");
             line.update();
             showChart("radar")
-        }
-            type_chart.data.datasets[0].backgroundColor = color;
-            type_chart.data.labels = labels;
-            type_chart.data.datasets[0].data = data;
-            type_chart.data.datasets[0].label = main_label;
-            type_chart.update();
+            radar.data.datasets[0].backgroundColor = color;
+            radar.data.labels = labels;
+            radar.data.datasets[0].data = data;
+            radar.data.datasets[0].label = main_label;
+            radar.update()
+    }
+        
         }
         
 
@@ -87,16 +94,26 @@ La ferme des 3 chênes: Analytics
         document.getElementById(id).style.display="none";
     }
     function showChart(id) {
-        document.getElementById(id).style.display="inline";
+        document.getElementById(id).style.display="";
     }
-    function change() // no ';' here
-    {
-        var elem = document.getElementById("para1");
-        if (elem.style.value=="none") elem.style.value = "block";
-        else elem.style.value = "none";
+    function show_para(id) {
+        document.getElementById(id).style.display="";
+
     }
-    
+    function hide_para(id_one, id_two) {
+        document.getElementById(id_one).style.display="none";
+        document.getElementById(id_two).style.display="none";
+    }
     </script>
-    <p id="para1">para1</p>
+
+    <p id="para1" style="display: none;">
+        ceci est le premier paragraphe
+    </p>
+    <p id="para2" style="display: none;">
+        le deuxièpe
+    </p>
+    <p id="para3" style="display: none;">
+        sappapa
+    </p>
 {% endblock %}
 
