--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -304,5 +304,7 @@ nav ul .deroulant a
     left: auto;
 }
 
-#para{
-    display: none; }
+#para1, #para2, #para3 {
+    text-align: justify;
+    padding: 10%;
+}
